// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane R2 — the phone is unchanged (golden) coi-vault at rest, iOS 390 1`] = `
{
  "lines": 440,
  "sha256": "10236cbb8b0de2fe27c79f82b5f7e39ec9f420e152a979ba8ea8658846d183f8",
}
`;

exports[`lane R2 — the phone is unchanged (golden) coi-vault at rest, web 390 1`] = `
{
  "lines": 440,
  "sha256": "10236cbb8b0de2fe27c79f82b5f7e39ec9f420e152a979ba8ea8658846d183f8",
}
`;

exports[`lane R2 — the phone is unchanged (golden) coi-vault at rest, web 768 1`] = `
{
  "lines": 440,
  "sha256": "10236cbb8b0de2fe27c79f82b5f7e39ec9f420e152a979ba8ea8658846d183f8",
}
`;

exports[`lane R2 — the phone is unchanged (golden) coi-vault?subId=S1 (the detail early return), iOS 390 1`] = `
{
  "lines": 700,
  "sha256": "dad4fb1454cbe5eedba7ff740df0f09ad38d60a27165eaf004154e2ff3e92c93",
}
`;

exports[`lane R2 — the phone is unchanged (golden) subs add sheet (add-sub), iOS 390 1`] = `
{
  "lines": 813,
  "sha256": "a2a6d1c96660ff405e0109ea1cc2875aa5e642f6a288f65a93f4ec425545697b",
}
`;

exports[`lane R2 — the phone is unchanged (golden) subs at rest, iOS 390 1`] = `
{
  "lines": 813,
  "sha256": "f42dc3c22066062961a2062599a3d9d9cd4240882dd5b4efabe735f64f6b42a2",
}
`;

exports[`lane R2 — the phone is unchanged (golden) subs at rest, web 390 1`] = `
{
  "lines": 813,
  "sha256": "f42dc3c22066062961a2062599a3d9d9cd4240882dd5b4efabe735f64f6b42a2",
}
`;

exports[`lane R2 — the phone is unchanged (golden) subs at rest, web 768 1`] = `
{
  "lines": 813,
  "sha256": "f42dc3c22066062961a2062599a3d9d9cd4240882dd5b4efabe735f64f6b42a2",
}
`;

exports[`lane R2 — the phone is unchanged (golden) subs detail open (sub-S1), iOS 390 1`] = `
{
  "lines": 990,
  "sha256": "7dcbb5320a5aa91a825ff0c5f0ef559fa97582b8c86a2e30ac349635837988fb",
}
`;
